# exportify

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  exportify.tcss  main.py  pyproject.toml  ytmusic.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
web/: .env.local.example  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
web/src/app/callback/: layout.tsx  page.tsx
web/src/app/callback/youtube/: page.tsx
web/src/app/export/: layout.tsx  page.tsx
web/src/app/transfer/: layout.tsx  page.tsx
web/src/lib/: export.ts  spotify.ts  youtube.ts
